<resources>
    <string name="app_name">Zambo</string>
    <string name="fgtpwd"><u>Forgot Password?</u></string>
    <string name="new_reg"><u>New User Registration</u></string>
    <string name="login"><u>Login</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pay_terms">I agree that Zambo/Bank/UIDAI may share my details with each other for the purpose of authenticating my Aadhaar Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="email_mob">Email/Mobile</string>
    <string name="ret_pass">Retrieve Password</string>
    <string name="dth">Recharge your DTH</string>
    <string name="datacard">Recharge your Datacard</string>
    <string name="mobile_recharge">Recharge your Mobile</string>
    <string name="dth_no">Account No.</string>
    <string name="datacard_no">Datacard No.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="more">More</string>
    <string name="username">Email/Mobile</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="my_profile">My Profile</string>
    <string name="user_id">User Id</string>
    <string name="state">State</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_company">Enter Company Name</string>
    <string name="add_line_one">Address Line 1</string>
    <string name="add_line_two">Address Line 2</string>
    <string name="city">Enter City</string>
    <string name="pin">Enter Pincode</string>
    <string name="history">Transaction Statement</string>
    <string name="others">Others</string>
    <string name="pay_electricity">Pay Electricty Bills</string>
    <string name="account_no">Account Number</string>
    <string name="recharge">Recharge</string>
    <string name="bill_payment">Bill Payments</string>
    <string name="customer_acc">Customer Account</string>
    <string name="pay_gas">Pay for Gas</string>
    <string name="number">Number</string>
    <string name="pay_landline">Pay For Landline</string>
    <string name="pay_insurance">Pay for Insurance</string>
    <string name="trans_history">Transaction History</string>
    <string name="support_desk">Support Desk</string>
    <string name="refund">Refund/Cancellation Policy</string>
    <string name="pr_pol"><![CDATA[T&C/Privacy Policy]]></string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="no_internet">No Internet Connectivity</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="continu">Continue</string>
    <string name="no_beneficiary">No Beneficiary</string>
    <string name="add_benef">Add Beneficiary</string>
    <string name="add_sender">Add Sender</string>
    <string name="enter_mob">Enter Sender Mobile Number</string>
    <string name="enter_name">Enter Sender name</string>
    <string name="otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add_new_benef">Add New Beneficiary</string>
    <string name="transfer">Transfer</string>
    <string name="delete">Delete Bene</string>
    <string name="our_service">Our Services</string>
    <string name="aeps">AEPS</string>
    <string name="dt">DTH</string>
    <string name="electricity">Electricity</string>
    <string name="gas">Gas</string>
    <string name="landline">Landline Bills</string>
    <string name="datacar">Datacard</string>
    <string name="insurance">Insurance</string>
    <string name="aeps_reciept">AEPS Reciept</string>
    <string name="go_back">Go Back</string>
    <string name="otp_message">Enter OTP sent to your mobile</string>
    <string name="pay_mob">Pay Mobile Bill</string>
    <string name="bill">Pay Bill</string>
    <string name="add_money">Add Money</string>
    <string name="add_money_wallet">Add Money to wallet</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_mon">Add Money</string>
    <string name="aeps_two">AEPS 2.0</string>
    <string name="tran_history">History</string>
    <string name="services">Services</string>
    <string name="money_transfer_two">Money Transfer 2.0</string>
    <string name="recharge_2">Recharge 2.0</string>
    <string name="recharge_3">Recharge 3.0</string>
    <string name="bbps">BBPS</string>
    <string name="pay_mobile">Mobile Postpaid Bill</string>
    <string name="pay_dth">Pay for DTH</string>
    <string name="pay_broadband">Pay for Broadband Bill</string>
    <string name="electricity_bill">Electricity Bill Payment</string>
    <string name="pay_landline_bill">Landline Bill Payment</string>
    <string name="pay_gas_bill">Gas Bill Payment</string>
    <string name="pay_water_bill">Water Bill Payment</string>
    <string name="pay_bill">Continue to Pay Bill</string>
    <string name="get_bill">Get Bill</string>
    <string name="enter_otp">Enter otp sent to your mibile</string>
    <string name="close">Close</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="aeps_redeem">Redeem AEPS Wallet</string>
    <string name="current_aeps_balance">Current AEPS Balance</string>
    <string name="to_main">To Main Wallet(₹) :</string>
    <string name="to_bank">To Bank(₹) :</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_agent_recharge_two">AgentRechargeTwo</string>
</resources>
