<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/rl_forgot_toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="@dimen/DP50">

        <ImageView
            android:id="@+id/img_back_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_centerVertical="true"
            android:padding="@dimen/DP15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_back_forgot"
            android:text="@string/ret_pass"
            android:textStyle="bold"
            android:textSize="@dimen/SP18"
            android:textColor="@color/white"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_below="@+id/rl_forgot_toolbar"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/email_mob"
            android:layout_marginTop="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:paddingLeft="4dp"
            android:inputType="text"
            android:paddingStart="4dp">
            <requestFocus />

        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:text="@string/login"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/register_fgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="15dp"
                android:layout_alignParentRight="true"
                android:text="@string/new_reg"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:background="@color/button_color"
            android:textColor="@color/white"
            android:text="@string/ret_pass" />

    </LinearLayout>

</RelativeLayout>
