<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/DP2"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP60"
        android:layout_margin="@dimen/DP10"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:text="@string/aeps_redeem"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/SP18"
        android:textColor="@color/gray"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/DP8"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_aeps_balance"
            android:layout_weight="0.60"
            android:padding="@dimen/DP2"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP10"
            android:textColor="@color/gray"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txt_amount_aeps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:padding="@dimen/DP2"
            android:layout_gravity="center_horizontal"
            android:text="@string/amount"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP12"
            android:textColor="@color/black"
            android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/DP4"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_no"
            android:layout_weight="0.60"
            android:padding="@dimen/DP2"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP10"
            android:textColor="@color/gray"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txt_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:padding="@dimen/DP2"
            android:layout_gravity="center_horizontal"
            android:text="@string/amount"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP12"
            android:textColor="@color/black"
            android:textAllCaps="true"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/DP4"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bank_name"
            android:layout_weight="0.60"
            android:padding="@dimen/DP2"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP10"
            android:textColor="@color/gray"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txt_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:padding="@dimen/DP2"
            android:layout_gravity="center_horizontal"
            android:text="@string/amount"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP12"
            android:textColor="@color/black"
            android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_main_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP60"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/DP8"
        android:paddingStart="@dimen/DP2"
        android:paddingTop="@dimen/DP4"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/to_main"
            android:layout_weight="0.60"
            android:padding="@dimen/DP2"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP10"
            android:textColor="@color/gray"
            android:textAllCaps="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/enter_amount"
            android:layout_weight="0.40"
            android:background="@drawable/box"
            android:layout_gravity="center_vertical"
            android:id="@+id/input_amount_wallet"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_wallet_amount"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_gravity="center"
                android:paddingStart="@dimen/DP8"
                android:layout_height="match_parent"
                android:hint=""
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textSize="@dimen/SP14"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ln_bank_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP60"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/DP8"
        android:paddingStart="@dimen/DP2"
        android:paddingTop="@dimen/DP4"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/to_bank"
            android:layout_weight="0.60"
            android:padding="@dimen/DP2"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="@dimen/SP10"
            android:textColor="@color/gray"
            android:textAllCaps="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/enter_amount"
            android:layout_weight="0.40"
            android:background="@drawable/box"
            android:layout_gravity="center_vertical"
            android:id="@+id/input_amount_bank"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_bank_amount"
                android:layout_width="match_parent"
                android:background="@null"
                android:paddingStart="@dimen/DP8"
                android:layout_height="match_parent"
                android:hint=""
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textSize="@dimen/SP14"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="RtlSymmetry">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/DP8"
        android:paddingStart="@dimen/DP2"
        android:paddingTop="@dimen/DP4"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_continue_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="@dimen/DP10"
            android:textSize="@dimen/SP18"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/continu"
            android:layout_weight="0.40"/>

        <Button
            android:id="@+id/btn_no_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/DP10"
            android:background="@color/colorAccent"
            android:layout_weight="0.60"
            android:textSize="@dimen/SP18"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/no"/>

    </LinearLayout>


</LinearLayout>